--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\_Draft\MvcApplication1\packages.config" />
   <repository path="..\Sample1\MvcMultiLanguage\packages.config" />
   <repository path="..\Sample2\packages.config" />
   <repository path="..\Sample3\packages.config" />
