--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignorar temporariamente tudo que estiver em _Draft
+_Draft/
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
