adicionando projeto separado de recursos do exemplo/sample 2

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\_Draft\MvcApplication1\packages.config" />
   <repository path="..\Sample1\MvcMultiLanguage\packages.config" />
+  <repository path="..\Sample2\MultiLanguage.MVC3.Sample2.UI.Web\packages.config" />
   <repository path="..\Sample2\packages.config" />
   <repository path="..\Sample3\packages.config" />
 </repositories>
