--- a/Sample2/MultiLanguage.MVC3.Sample2.UI.Web/Mvc3MultiLanguageSample2.csproj
+++ b/Sample2/MultiLanguage.MVC3.Sample2.UI.Web/Mvc3MultiLanguageSample2.csproj
@@ -60,16 +60,6 @@
     <Reference Include="System.DirectoryServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_GlobalResources\Global.Designer.cs">
-      <DependentUpon>Global.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="App_GlobalResources\Global.en-US.designer.cs">
-      <DependentUpon>Global.en-US.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <Compile Include="Attributes\LocalizationDisplayNameAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -116,18 +106,6 @@
     <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_GlobalResources\Global.en-US.resx">
-      <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Global.en-US.designer.cs</LastGenOutput>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App_GlobalResources\Global.resx">
-      <Generator>GlobalResourceProxyGenerator</Generator>
-      <LastGenOutput>Global.Designer.cs</LastGenOutput>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Home\App_LocalResources\Index.cshtml.en-US.resx" />
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +116,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MultiLanguage.MVC3.Sample2.Resources\MultiLanguage.MVC3.Sample2.Resources.csproj">
+      <Project>{37E247A0-F633-4FC4-ACE4-E027329BAB2E}</Project>
+      <Name>MultiLanguage.MVC3.Sample2.Resources</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
